crates/reductool-proc-macro/tests/ui/method_self.stderr
error: #[aitool] must be placed on a free-standing function (no `self`).Move the function out of the `impl` block or remove the receiver.
 --> tests/ui/method_self.rs:7:10
  |
7 |     fn m(&self, x: i32) {}
  |          ^^^^^
